<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.android.calculator.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.formula}"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.result}"
            android:textSize="64sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formula" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:columnCount="4"
            android:orientation="horizontal"
            android:rowCount="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_clear"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/clear"
                android:textColor="@color/red" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_plus"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/plus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_minus"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/minus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_backspace"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/backspace" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_seven"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/seven" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_eight"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_nine"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_multiplication"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/multiplication" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_four"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_five"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_six"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_division"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/division" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_one"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_two"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_three"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_equals"
                android:layout_rowSpan="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_vertical"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/equals" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_double_zero"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/double_zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_zero"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_dot"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:onClick="@{viewModel::buttonClick}"
                android:text="@string/dot" />

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>