<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="splitViewModel"
            type="com.android.calculator.SpiltActivityViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplitActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bt_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/split_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@={splitViewModel.liveDataResult}"
        android:textSize="64sp"
        android:textStyle="bold"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/price_hint"
        android:textSize="32sp"
        android:text="@={splitViewModel.liveDataPrice}"
        android:inputType="number"
        android:singleLine="true"
        android:maxLength="8"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/split_result" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@{splitViewModel.liveDataCount}"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_increase"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_circle_button"
        android:text="@string/plus"
        android:textSize="24sp"
        android:onClick="@{splitViewModel::increaseClick}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_count"
        app:layout_constraintTop_toBottomOf="@+id/et_price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_decrease"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_circle_button"
        android:text="@string/minus"
        android:textSize="24sp"
        android:onClick="@{splitViewModel::decreaseClick}"
        app:layout_constraintEnd_toStartOf="@+id/tv_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_price" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>